[tool.poetry]
name = "ylab-python-example"
version = "0.1.0"
description = ""
authors = ["tenjo-t <tenjo0314takashi@gmail.com>"]
readme = "README.md"
packages = [{include = "ylab_python_example"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
